@@ -1,127 +1,95 @@
 # README
 
-Note: I expect these instructions to change after Jason 'dockerizes' us. Because of this I won't be getting too
-specific on versions of some things, if I expect it not to matter.
+## Setup for Ruby on Rails
+##### Note for Windows 10 Pro users:  When installing programs, ensure that none of file paths have spaces in them (e.g. C:\Users\Program Location vs C:\Users\ProgramLocation).  The first one will cause problems with Ruby on Rails.
 
-Download and install JRuby 9.2.8 on your system:
-
-https://www.jruby.org/download
-
-Download jruby complete jar file and put it in the jruby root directory:
-
-https://www.jruby.org/download
-
-```bazaar
-gbowman@MSI c:\languages\jruby\jruby9.2.8.0\jruby-9.2.8.0                    
-$ ls -la                                                                     
-total 25625                                                                  
-drwxr-xr-x 1 gbowman 197121        0 Aug 19 15:37 .                          
-drwxr-xr-x 1 gbowman 197121        0 Aug 19 15:35 ..                         
--rw-r--r-- 1 gbowman 197121     1282 Aug 12 10:19 BSDL                       
--rw-r--r-- 1 gbowman 197121   131622 Aug 12 10:19 COPYING                    
--rw-r--r-- 1 gbowman 197121      218 Aug 12 10:19 LEGAL                      
--rw-r--r-- 1 gbowman 197121     2581 Aug 12 10:19 LICENSE.RUBY               
-drwxr-xr-x 1 gbowman 197121        0 Aug 12 10:29 bin                        
--rw-r--r-- 1 gbowman 197121 26083456 Aug 19 15:31 jruby-complete-9.2.8.0.jar 
-drwxr-xr-x 1 gbowman 197121        0 Aug 12 10:29 lib                        
-drwxr-xr-x 1 gbowman 197121        0 Aug 12 10:29 samples                    
-drwxr-xr-x 1 gbowman 197121        0 Aug 12 10:29 tool                       
+1. Download and install the current stable versions of:  
+JAVA 11 JDK, JRuby ((<= 9.2.8.0) - Desired Executable Setup File), Maven, Yarn, PostgreSQL, and Node  
+(When acquiring the JDK and JRuby, ensure they are both the 64-bit versions and allow paths to be modified)
 ```
+https://www.oracle.com/java/technologies/javase-jdk11-downloads.html
+https://www.jruby.org/download
+https://maven.apache.org/download.cgi  (install instructions at https://maven.apache.org/install.html)
+https://yarnpkg.com/lang/en/docs/install/#windows-stable
+https://nodejs.org/en/download/  
+https://www.postgresql.org/download/ (Remember the password assigned during installation)
+```
+2. Download JRuby JAR complete file (and place it into the base directory JRuby was installed into)
+```
+https://www.jruby.org/download
+```
+3.  Ensure GIT is working on the development machine and clone the following Repo:
+```
+https://github.com/meetveracity/coding-challenge-app.git
+```
+***Wherever the clone is created will hereafter be referred to as the Rails root.***
 
-Make yourself a bat/bash file and make the obvious changes (This is mine):
+4.  Create a batch file in the Rails root named options.bat and copy the following into it and changing the marked lines as needed for the local environment (Including removing the > at the beginning of the lines):
 ```bazaar
+@echo off
 set JRUBY_OPTS=--dev -J-Xmx2g -J-Djava.awt.headless=true -J-Dcatalina.base=./logs/java_logs -J-Djava.net.preferIPv4Stack=true
-set GEM_HOME=C:\work\digital_services_bpa\gem_home
-set JRUBY_HOME=C:\languages\jruby\jruby9.2.8.0\jruby-9.2.8.0
-set JRUBY_JAR=C:\languages\jruby\jruby9.2.8.0\jruby-9.2.8.0\jruby-complete-9.2.8.0.jar
-set JAVA_HOME=C:\languages\Java\jdk-11.0.4
+>set GEM_HOME=<Up one directory from the repo then mkdir gem_home.  That entire absolute path (up one from repo + \gem_home)>
+>set JRUBY_HOME=<Full absolute path of the install folder for ruby>
+>set JRUBY_JAR=<Full absolute path of the install folder for ruby and full name of JAR File that was copied earlier>
+>set JAVA_HOME=<Full absolute path of the install folder for the Java JDK>
 set PATH=%GEM_HOME%\bin;%JRUBY_HOME%\bin;%JAVA_HOME%\bin;.\bin;%PATH%;
 set JAVA_OPTS=%JAVA_OPTS% --add-opens java.base/java.io=org.jruby.dist
 set JAVA_OPTS=%JAVA_OPTS% --add-opens java.base/java.nio.channels=org.jruby.dist
 set JAVA_OPTS=%JAVA_OPTS% --add-opens java.base/sun.nio.ch=org.jruby.dist
 set JAVA_OPTS=%JAVA_OPTS% --add-opens java.base/sun.nio.ch=org.jruby.core
 set JAVA_OPTS=%JAVA_OPTS% --add-opens java.logging/java.util.logging=org.jruby.dist
+set DATABASE_USER=dsbpa
+set DATABASE_PASSWORD=dsbpa
 ```
 
-You will run your bat or source your bash.
-
-Install Java 11 JDK.
-https://www.oracle.com/technetwork/java/javase/downloads/jdk11-downloads-5066655.html
-
-Install Maven, Yarn and Node. The latest should be fine.
-
-At a terminal run in the project root run the following:
-```bazaar
-gem install bundler.
+5.  At a command prompt, run the following commands while in Rails root:  
 ```
-
-From rails root do a (For the full build maven will do this):
-```bazaar
+options
+gem install bundler
 bundle install
-```
-
-Run the following at rails root:
-```
 yarn install
 ```
-
-Setup your database.  We will use postgres, so install that on your system.
-Create a user: 
-```bazaar
-dsbpa
+6.  At the command prompt run the following command to bring up the PostgreSQL command line interface (CLI)
 ```
-
-Assign that user all permissions.
-
-Create the following databases, owner is dsbpa:
-```bazaar
-dsbpa_development
-dsbpa_test
-dsbpa_production
+psql -U postgres
 ```
+(The password will be the one that was set during postgreSQL installation)  
 
-Run:
-
-```bazaar
+7.  Once the CLI is available, type the following commands
+```
+CREATE USER dsbpa WITH PASSWORD 'dsbpa';
+CREATE DATABASE dsbpa_development;
+CREATE DATABASE dsbpa_test;
+CREATE DATABASE dsbpa_production;
+GRANT ALL PRIVILEGES ON DATABASE dsbpa_development TO dsbpa;
+GRANT ALL PRIVILEGES ON DATABASE dsbpa_test TO dsbpa;
+GRANT ALL PRIVILEGES ON DATABASE dsbpa_production TO dsbpa;
+\q
+```
+8.  At a command prompt, run the following commands while in the Rails root and then restart the Rails server (if the rails server says you have pending migrations, rerun this):
+```
+options.bat
 rake db:migrate
+rake db:seed
 ```
-
-There is a bat file to bring up the webpack dev server for development.   Convert it to bash if on a Mac.
-$ wds.bat
-
-```bazaar
+9.  After you restart the Rails server, run the following commands while in the Rails root:
+```
+options.bat
 wds.bat
 ```
-
-There is a startup.bat file to bring up the webserver outside of Tomcat.  Convert it to bash if on a Mac.
-$ startup.bat
-
-Running shows:
-```bazaar
-$ startup.bat
-
-@ C:\work\digital_services_bpa\dsbpa
-$ C:\languages\Java\jdk-11.0.4\bin\java  -server  -jar C:\languages\jruby\jruby9.2.8.0\jruby-9.2.8.0\jruby-complete-9.2.8.0.jar C:\work\digital_services_bpa\gem_home\bin\trinidad
-WARNING: An illegal reflective access operation has occurred
-WARNING: Illegal reflective access by org.jruby.runtime.encoding.EncodingService (file:/C:/languages/jruby/jruby9.2.8.0/jruby-9.2.8.0/jruby-complete-9.2.8.0.jar) to field java.io.Console.cs
-WARNING: Please consider reporting this to the maintainers of org.jruby.runtime.encoding.EncodingService
-WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
-WARNING: All illegal access operations will be denied in a future release
-Deploying from C:/work/digital_services_bpa/dsbpa as /dsbpa
-Initializing ProtocolHandler ["http-bio-0.0.0.0-3000"]
-Unknown loader jdk.internal.loader.ClassLoaders$AppClassLoader@2cdf8d8a class jdk.internal.loader.ClassLoaders$AppClassLoader
-jruby 9.2.8.0 (2.5.3) 2019-08-12 a1ac7ff Java HotSpot(TM) 64-Bit Server VM 11.0.4+10-LTS on 11.0.4+10-LTS +jit [mswin32-x86_64]
-using a shared (threadsafe!) runtime
-uri:classloader:/jruby/rack/response.rb:294: warning: constant ::Fixnum is deprecated
-uri:classloader:/jruby/rack/core_ext.rb:26: warning: constant ::NativeException is deprecated
-Starting ProtocolHandler ["http-bio-0.0.0.0-3000"]
-
+10.  Open a second command prompt/terminal and run the following while in the Rails root:
 ```
-When you see 'Starting ProtocolHandler' it is listening. Do not worry about the warnings.
-
-Try:
-
+options.bat
+startup.bat
+```
+11.  After this is running, the website should be running locally.  To test, go to:
+```
 http://localhost:3000/dsbpa
+```
+
+## Notes
+
+
 
 To build a war:
 
@@ -140,44 +108,44 @@ When deploying to Tomcat rename the war file to 'dsbpa.war' so the initial conte
 
 
 
-# Docker notes
-###bring docker up in foreground
+## Docker notes
+#### Bring docker up in foreground
 ```
-docker-compose up 
+docker-compose up
 ```
 
-###pull latest war
+#### Pull latest war
 ```
 docker-compose pull
 ```
 
-###test my local changes (run maven build first)
+#### Test my local changes (run maven build first)
 ```
-docker-compose up --build 
-```
-
-### run in background
-```
-docker-compose up -d 
+docker-compose up --build
 ```
 
-###kill my background docker
+#### Run in background
 ```
-docker-compose down 
-```
-
-###execute command in docker container
-```
-docker-compose exec dsbpa ls -la 
+docker-compose up -d
 ```
 
-###show stdout
+#### Kill my background docker
 ```
-docker-compose logs dsbpa 
+docker-compose down
 ```
 
-# Running Selenium Tests
-#### Prerequisites 
+#### Execute command in docker container
+```
+docker-compose exec dsbpa ls -la
+```
+
+#### Show stdout
+```
+docker-compose logs dsbpa
+```
+
+## Running Selenium Tests
+#### Prerequisites
 
 You must install the Selenium side runner and add it to your PATH. Make sure you have Chrome installed on your machine.
 ```
